syntax = 'proto3';

package receiving.v1alpha0;

option go_package = "github.com/materials-resources/s_prophet/proto/order/v1alpha0";

service ReceivingService {
  rpc GetReceipt(GetReceiptRequest) returns (GetReceiptResponse);
}

message GetReceiptRequest {
  int32 id = 1;
}

message GetReceiptResponse {
  message Item {
    message Order {
      string id = 1; //Order ID
      string name = 2; //Order Name
      double qty = 3; //Quantity Allocated
    }
    int32 id = 1;
    string sn = 2;
    string name = 3;
    double qty_received = 4;
    string primary_bin = 5;
    repeated Order allocated_orders = 6;
  }
  int32 id = 1;
  repeated Item items = 2;
}